--- a/BRabbitMQ/BRabbitMQ.Infrastructure.IoC/BRabbitMQ.Infrastructure.IoC.csproj
+++ b/BRabbitMQ/BRabbitMQ.Infrastructure.IoC/BRabbitMQ.Infrastructure.IoC.csproj
@@ -9,6 +9,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BRabbitMQ.Banking.Application\BRabbitMQ.Banking.Application.csproj" />
+      <ProjectReference Include="..\BRabbitMQ.Banking.Data\BRabbitMQ.Banking.Data.csproj" />
       <ProjectReference Include="..\BRabbitMQ.Domain.Core\BRabbitMQ.Domain.Core.csproj" />
       <ProjectReference Include="..\BRabbitMQ.Infrastructure.Bus\BRabbitMQ.Infrastructure.Bus.csproj" />
     </ItemGroup>
